added lander sprite

--- a/JavaScriptPractice/LunarLander/index.html
+++ b/JavaScriptPractice/LunarLander/index.html
@@ -36,7 +36,8 @@
         </div>
     </div>
     
-<img src="./assets/stars.png" id="stars">
+<img src="./assets/stars.png" id="stars" class="sprites">
+<img src="./assets/lander-t.png" id="lander" class="sprites">
 
 <script src="items.js"></script>
 <script src="index.js"></script>
