added intro and instructions

--- a/JavaScriptPractice/LunarLander/index.html
+++ b/JavaScriptPractice/LunarLander/index.html
@@ -35,6 +35,33 @@
             </div>   
         </div>
     </div>
+    <div class="footer">
+        <div class="manual">
+            <h3>Lander Mission</h3>
+            <p>by Stuart Yee</p>
+        </div>
+        <div class="manual">
+            <h4>Objective:</h4>
+            <p>Land the landing module safely with a velocity of 
+                4kph or lower onto the landing area. Use main 
+                thrusters (UP ARROW) to slow decent and use 
+                lateral thrusters (RIGHT and LEFT ARROWS) 
+                to maneuver craft to landing zone.</p>
+        </div>
+        <div class="manual">
+            <h4>Thrusters:</h4>
+            <p>UP (main), RIGHT and LEFT ARROWS</p>
+        </div>
+        <div class="manual">
+            <h4>Restart Mission:</h4>
+            <p>ESC or Click "Restart"</p>
+        </div>     
+        <div class="manual">
+            <h4>Abort:</h4>
+            <p>X Key</p>
+        </div>   
+
+    </div>
     
 <img src="./assets/stars.png" id="stars" class="sprites">
 <img src="./assets/lander-t.png" id="lander" class="sprites">
